Add Config WebAPI

--- a/src/RAEFC.Service.Api/RAEFC.Service.Api.csproj
+++ b/src/RAEFC.Service.Api/RAEFC.Service.Api.csproj
@@ -2,9 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>a5d9f0df-8d35-4bdf-9da1-df773f01a832</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
