--- a/src/RAEFC.Domain/RAEFC.Domain.csproj
+++ b/src/RAEFC.Domain/RAEFC.Domain.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RAEFC.Domain.Core\RAEFC.Domain.Core.csproj" />
+  </ItemGroup>
+
 </Project>
