--- a/src/RAEFC.Infrastructure.Repository/RAEFC.Infrastructure.Repository.csproj
+++ b/src/RAEFC.Infrastructure.Repository/RAEFC.Infrastructure.Repository.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\RAEFC.Domain\RAEFC.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repository\" />
+  </ItemGroup>
+
 </Project>
